# msys2-launcher-rs

./: Cargo.toml  README.md  build-release.sh  msys2.toml  msys2.yml
.cargo/: config
.github/workflows/: build.yml
src/: config.rs  launcher.rs  lib.rs  main.rs
