[package]
name = "msys2-launcher"
version = "0.1.0"
authors = ["Alexander Ovchinnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
